--- a/scss/components/_dishes-card.scss
+++ b/scss/components/_dishes-card.scss
@@ -1,30 +1,62 @@
-.dishes-card{
+.dishes-card {
+  position: relative;
+  width: 340px;
+  height: 405px;
+  border-radius: 30px;
   display: flex;
   flex-direction: column;
-//   justify-content: flex-end;
-  width: 340px;
-  height: 400px;
-  padding: 24px;
-  border-radius: 30px;
-  overflow: hidden;
-
-
-  &__image{
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 30px;
-  }
-
-
+  justify-content: flex-end;
   &__title {
-    font-size: 24px;
+    color: #000;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
     font-weight: 600;
   }
+}
+.dishes-card__wrapper {
+  border-radius: 0px 0px 30px 30px;
+  background: rgba(254, 4, 60, 0.8);
+  padding: 14px 25px 14px 25px;
+}
+.dishes-card__container {
+  display: flex;
+  align-items: center;
+  gap: 62px;
+}
+.dishes-card__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border-radius: 30px;
+}
+.dishes-card__icon-nav-pointer {
+  width: 18px;
+  height: 25px;
+  margin: 0px 4px;
+}
 
-  &__text {
-    font-size: 14px;
-    font-weight: 300;
-  }
+.dishes-card__price-text {
+  color: #000;
+  font-family: 'Playfair Display', serif;
+  font-size: 32px;
+  font-weight: 500;
+}
+.dishes-card__pointer-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #000;
+
+  font-family: 'Playfair Display', serif;
+  font-size: 15px;
+  font-weight: 400;
+}
+.dishes-card__calories-text {
+  color: #000;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
 }
