--- a/scss/layouts/_dishes-section.scss
+++ b/scss/layouts/_dishes-section.scss
@@ -1,15 +1,30 @@
-.dishes-section__slider{
-        display: flex;
-        align-items: center;
-        gap: 32px;
-
-        &__title {
-            font-size: 24px;
-            font-weight: 600;
-          }
-    
-        &__text {
-            font-size: 14px;
-            font-weight: 300;
-          }
-        }
+.dishes-section {
+  &__container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+  }
+}
+.dishes-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 45px;
+}
+.dishes-item {
+  flex-basis: calc((100% - 240px) / 5);
+}
+.dishes-section__title {
+  color: #000;
+  font-family: 'Poppins', sans-serif;
+  font-size: 48px;
+  font-weight: 500;
+  padding: 136px 0px 86px 152px;
+}
+.tomatoes-png {
+  position: absolute;
+}
+.perets-png {
+  position: absolute;
+  padding-left: 1300px;
+}
