--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -29,10 +29,10 @@
   &__listok {
     position: absolute;
     transform: rotate(142.408deg);
-    right: 223px;
-    width: 150px;
+    top: -70%;
+    left: 75%;
+    width: 148px;
     height: 144px;
-    top: -73px;
   }
   &__button-section {
     display: flex;
