--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,4 +1,4 @@
-.slide-button-next {
+.slide-next {
   width: 38px;
   height: 38px;
   background-color: #d9d9d980;
@@ -7,6 +7,9 @@
   align-items: center;
   justify-content: center;
   display: flex;
+  position: absolute;
+  top: 48%;
+  left: 94%;
   &:hover {
     filter: drop-shadow(0px 0px 15px #fff);
     cursor: pointer;
