--- a/scss/components/_dishes-card.scss
+++ b/scss/components/_dishes-card.scss
@@ -22,6 +22,7 @@
   display: flex;
   align-items: center;
   gap: 62px;
+  justify-content: start;
 }
 .dishes-card__image {
   position: absolute;
@@ -59,4 +60,14 @@
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
   font-weight: 400;
+}
+.dishes-card-icon {
+  position: absolute;
+  top: -8%;
+  left: 84%;
+}
+.dishes-card-heart-icon {
+  position: absolute;
+  top: 6%;
+  left: 6%;
 }
