--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,10 @@
 @import './base';
 @import './layouts/header';
-@import "./layouts/hero-section";
-@import "./components/buttons";
-@import "./layouts/slide-button-section";
-@import "./layouts/container";
-@import "./layouts/dishes-section.scss";
-@import "./components/dishes-card";
+@import './layouts/hero-section';
+@import './components/buttons';
+@import './layouts/slide-button-section';
+@import './layouts/container';
+@import './layouts/dishes-section.scss';
+@import './components/dishes-card';
+@import './layouts/order-section';
+@import './layouts/order-card';
