fix-bugs-add-new-content

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,5 @@
 @import './components/dishes-card';
 @import './layouts/order-section';
 @import './layouts/order-card';
+@import './layouts/deals-section';
+@import './layouts/deals-card';
