--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -20,7 +20,7 @@
     height: 100%;
     // max-width: 700px;
     padding-top: calc(71px + 105px);
-    padding-left: 62px;
+    padding: 176px 62px 0px 62px;
   }
 
   &__title {
