--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,5 @@
 @import './layouts/order-card';
 @import './layouts/deals-section';
 @import './layouts/deals-card';
+@import './layouts/recomendation-section';
+@import './layouts/recomendation-card';
