--- a/scss/layouts/_deals-section.scss
+++ b/scss/layouts/_deals-section.scss
@@ -1,11 +1,11 @@
 .deals-section {
   width: 100%;
-  height: 928px;
+  height: 870px;
   position: relative;
 }
-.deals-container {
+.deals-section__container {
   width: 100%;
-  padding-left: 130px;
+  padding: 64px 0px 0px 152px;
 }
 .deals-list {
   display: flex;
@@ -58,8 +58,8 @@
 }
 .tomatoes-2-png {
   position: absolute;
-  top: -14%;
-  left: 72%;
+  top: -12%;
+  left: 74%;
 }
 .deals-section__arrow {
   width: 180px;
