--- a/scss/layouts/_dishes-section.scss
+++ b/scss/layouts/_dishes-section.scss
@@ -1,14 +1,14 @@
 .dishes-section {
+  position: relative;
   width: 100%;
   height: 928px;
-  position: relative;
   &__container {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 82px;
-    margin-top: 86px;
+    padding-top: 86px;
   }
 }
 .dishes-list {
@@ -21,7 +21,7 @@
   font-family: 'Poppins', sans-serif;
   font-size: 48px;
   font-weight: 500;
-  padding: 136px 0px 0px 152px;
+  padding: 136px 152px 0px 152px;
 }
 .tomatoes-png {
   position: absolute;
@@ -36,8 +36,8 @@
 .lemon-png {
   position: absolute;
   top: 82%;
-  left: 94%;
-  transform: translate(-10px, -50px);
+  left: 92%;
+  transform: translate(16px, -50px);
 }
 .list-png {
   position: absolute;
