--- a/scss/layouts/_order-section.scss
+++ b/scss/layouts/_order-section.scss
@@ -5,7 +5,7 @@
 .order-section__container {
   width: 100%;
   height: 120px;
-  padding-left: 146px;
+  padding: 64px 152px 0px 152px;
 }
 .order-section__title {
   color: #000;
@@ -17,6 +17,7 @@
   display: flex;
   gap: 80px;
   padding-top: 90px;
+  padding-bottom: 92px;
 }
 
 .order-section__button {
