--- a/scss/components/_dishes-card.scss
+++ b/scss/components/_dishes-card.scss
@@ -12,6 +12,10 @@
     font-size: 20px;
     font-weight: 600;
   }
+  &:hover {
+    box-shadow: 0px 8px 4px 0px rgba(0, 0, 0, 0.25);
+    transform: translateY(-5px);
+  }
 }
 .dishes-card__wrapper {
   border-radius: 0px 0px 30px 30px;
