--- a/scss/layouts/_dishes-section.scss
+++ b/scss/layouts/_dishes-section.scss
@@ -35,8 +35,8 @@
 }
 .lemon-png {
   position: absolute;
-  top: 82%;
-  left: 92%;
+  bottom: 18px;
+  right: 18px;
   transform: translate(16px, -50px);
 }
 .list-png {
@@ -51,6 +51,10 @@
   width: 60px;
   height: 60px;
   fill: #971e1e;
+  &:hover {
+    fill: #4d0d0d;
+    cursor: pointer;
+  }
 }
 
 .slide-button-next {
@@ -69,4 +73,20 @@
   width: 60px;
   height: 60px;
   fill: #971e1e;
+  &:hover {
+    fill: #4d0d0d;
+    cursor: pointer;
+  }
+}
+.icon-fill-heart {
+  width: 30px;
+  height: 25px;
+  fill: #fff;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  &:hover {
+    fill: rgba(254, 4, 60, 0.8);
+    cursor: pointer;
+  }
 }
