--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,9 +7,10 @@
 @import './layouts/dishes-section.scss';
 @import './components/dishes-card';
 @import './layouts/order-section';
-@import './layouts/order-card';
+@import './components/order-card';
 @import './layouts/deals-section';
-@import './layouts/deals-card';
+@import './components/deals-card';
 @import './layouts/recommendation-section';
-@import './layouts/recommendation-card';
+@import './components/recommendation-card';
 @import './layouts/services-section';
+@import './layouts/review-section';
