--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,13 +3,14 @@
 @import './layouts/hero-section';
 @import './components/buttons';
 @import './layouts/slide-button-section';
-@import './layouts/container';
 @import './layouts/dishes-section.scss';
 @import './components/dishes-card';
 @import './layouts/order-section';
-@import './layouts/order-card';
+@import './components/order-card';
 @import './layouts/deals-section';
-@import './layouts/deals-card';
+@import './components/deals-card';
 @import './layouts/recommendation-section';
-@import './layouts/recommendation-card';
+@import './components/recommendation-card';
 @import './layouts/services-section';
+@import './layouts/review-section';
+@import './layouts/footer-section';
